--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,16 @@
     <title>To-Do</title>
   </head>
   <body>
+    <div id="app"></div>
     <div class="container">
-      <h1>Electron TO-DO</h1>
+      <!-- <input id="title" type="text" placeholder="title" /> -->
       <div class="btn-container">
         <button id="save-btn" class="btn">Save</button>
         <button id="restore-btn" class="btn">Restore</button>
         <button id="add-btn" class="btn add-btn">Add</button>
       </div>
       <div class="divider"></div>
-      <div id="grid" class="ag-theme-material"></div>
+      <div id="grid" class="ag-theme-alpine"></div>
     </div>
   </body>
 </html>
