changes to editing window

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>To-Do</title>
   </head>
   <body>
+    <div id="changeTitle">
+      Title of List: <input id="title" />
+      <button id="btn" className="submitBtn" type="button">Set</button>
+      <script defer src="./renderer.js"></script>
+    </div>
     <div id="app"></div>
     <div class="container">
       <!-- <input id="title" type="text" placeholder="title" /> -->
